--- a/package.json
+++ b/package.json
@@ -21,15 +21,27 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
+    "css-selector-tokenizer": "^0.5.4",
+    "cssnano": "^3.4.0",
     "deep-merge": "^1.0.0",
     "express": "^4.13.4",
     "gulp": "^3.9.0",
+    "loader-utils": "^0.2.12",
+    "lodash.camelcase": "^4.0.1",
     "monkey-hot-loader": "0.0.3",
     "nodemon": "^1.8.1",
+    "object-assign": "^4.0.1",
+    "postcss": "^5.0.14",
+    "postcss-modules-extract-imports": "^1.0.0",
+    "postcss-modules-local-by-default": "^1.0.1",
+    "postcss-modules-scope": "^1.0.0",
+    "postcss-modules-values": "^1.1.1",
     "socket.io": "^1.4.5",
     "source-map-support": "^0.4.0",
     "style-loader": "^0.13.0",
-    "webpack": "^1.12.13"
+    "webpack": "^1.12.13",
+    "webpack-dev-middleware": "^1.5.1",
+    "webpack-hot-middleware": "^2.6.4"
   },
   "dependencies": {
     "webpack-dev-server": "^1.14.1"
