--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "webpack-hot-middleware": "^2.6.4"
   },
   "dependencies": {
+    "babel-runtime": "^6.6.1",
     "webpack-dev-server": "^1.14.1"
   }
 }
