--- a/package.json
+++ b/package.json
@@ -44,7 +44,14 @@
     "webpack-hot-middleware": "^2.6.4"
   },
   "dependencies": {
+    "axios": "^0.12.0",
     "babel-runtime": "^6.6.1",
+    "body-parser": "^1.15.2",
+    "lodash": "^4.13.1",
+    "material-ui": "^0.15.1",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-tap-event-plugin": "^1.0.0",
     "webpack-dev-server": "^1.14.1"
   }
 }
