--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-tap-event-plugin": "^1.0.0",
+    "redux-thunk": "^2.1.0",
     "webpack-dev-server": "^1.14.1"
   }
 }
