--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "material-ui": "^0.15.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^1.0.0",
+    "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
     "webpack-dev-server": "^1.14.1"
   }
