--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "body-parser": "^1.15.2",
     "lodash": "^4.13.1",
     "material-ui": "^0.15.1",
+    "moment": "^2.13.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
