--- a/package.json
+++ b/package.json
@@ -47,15 +47,21 @@
     "axios": "^0.12.0",
     "babel-runtime": "^6.6.1",
     "body-parser": "^1.15.2",
+    "jwt-simple": "^0.5.0",
     "lodash": "^4.13.1",
     "material-ui": "^0.15.1",
     "moment": "^2.13.0",
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.1.0",
+    "passport-local": "^1.0.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.5.2",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
+    "redux-form": "^5.3.1",
     "redux-thunk": "^2.1.0",
     "webpack-dev-server": "^1.14.1"
   }
