--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "css-selector-tokenizer": "^0.5.4",
     "cssnano": "^3.4.0",
     "deep-merge": "^1.0.0",
+    "eslint-plugin-react": "^6.0.0",
     "express": "^4.13.4",
     "gulp": "^3.9.0",
     "loader-utils": "^0.2.12",
